# OCRTranslator

./: .gitignore  AGENTS.MD  Cargo.toml  LICENSE  README.md
crates/app-core/: Cargo.toml
crates/app-core/examples/: translate_probe.rs
crates/app-core/src/: config.rs  lib.rs  translators.rs
crates/app-tauri/: Cargo.toml  app.exe.manifest  app.manifest.rc  build.rs  package-lock.json  package.json  tauri.conf.json
crates/app-tauri/capabilities/: default.json
crates/app-tauri/frontend/: index.html  overlay.html  status.html  vite.config.ts
crates/app-tauri/frontend/src/: main.tsx  overlay.tsx  status.tsx  styles.css  tauri.ts
crates/app-tauri/frontend/src/components/ui/: card.tsx  resizable.tsx  scroll-area.tsx
crates/app-tauri/src/: main.rs
crates/app-tauri/ui/: index.html  main.js  overlay.html  selection-box.html  selection-dim.html  selection.html  styles.css
crates/app-windows/: Cargo.toml
crates/app-windows/examples/: ocr_probe.rs
crates/app-windows/src/: cursor.rs  geometry.rs  hotkey.rs  lib.rs  native_selection.rs  ocr.rs  overlay_window.rs  pipeline.rs  screen.rs
diagnostics/: 062426-7875-analysis.txt  062426-7875-local-analysis.txt  062426-7875-verbose-nosym.txt  062426-9078-analysis.txt  062426-9078-local-analysis.txt  062426-9078-verbose-nosym.txt
docs/: LUNA_PARITY.md  ROADMAP.md  THIRD_PARTY.md
scripts/: image_replace_smoke_test.mjs  ocr_regression.ps1  package_release.ps1  translator_regression.ps1  ui_state_regression.ps1
