[workspace]
members = [
    "crates/app-core",
    "crates/app-windows",
    "crates/app-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["OCR Translator"]
license = "UNLICENSED"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
hmac = "0.12"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
libloading = "0.8"
md5 = "0.7"
percent-encoding = "2"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
windows = { version = "0.58", features = [
    "Foundation",
    "Foundation_Collections",
    "Globalization",
    "Graphics_Imaging",
    "Media_Ocr",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
