[package]
name = "ocr-translator"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[build-dependencies]
embed-resource = "3"
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
app-core = { path = "../app-core" }
app-windows = { path = "../app-windows" }
base64.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["tray-icon"] }
tokio.workspace = true
windows = { workspace = true, features = ["Win32_UI_Shell"] }
